Changes to AIP panel