@@ -37,6 +37,7 @@ import org.roda.core.data.v2.ip.IndexedRepresentation;
 import org.roda.core.data.v2.ip.Permissions;
 import org.roda.core.data.v2.ip.disposalhold.DisassociateDisposalHoldRequest;
 import org.roda.core.data.v2.representation.ChangeTypeRequest;
+import org.roda.wui.client.browse.BrowseRepresentation;
 import org.roda.wui.client.browse.CreateDescriptiveMetadata;
 import org.roda.wui.client.browse.EditPermissions;
 import org.roda.wui.client.common.LastSelectedItemsSingleton;
@@ -87,14 +88,14 @@ public class AIPToolbarActions extends AbstractActionable<IndexedAIP> {
   private static final AIPToolbarActions GENERAL_INSTANCE = new AIPToolbarActions(NO_AIP_PARENT, NO_AIP_STATE, null);
   private static final ClientMessages messages = GWT.create(ClientMessages.class);
   private static final Set<AIPAction> POSSIBLE_ACTIONS_ON_NO_AIP_TOP = new HashSet<>(
-    Arrays.asList(AIPAction.NEW_CHILD_AIP_TOP));
+    List.of(AIPAction.NEW_CHILD_AIP_TOP));
   private static final Set<AIPAction> POSSIBLE_ACTIONS_ON_NO_AIP_BELOW = new HashSet<>(
-    Arrays.asList(AIPAction.NEW_CHILD_AIP_BELOW));
-  private static final Set<AIPAction> POSSIBLE_ACTIONS_ON_SINGLE_AIP = new HashSet<>(
-    Arrays.asList(AIPAction.DOWNLOAD, AIPAction.MOVE_IN_HIERARCHY, AIPAction.UPDATE_PERMISSIONS, AIPAction.REMOVE,
-      AIPAction.NEW_PROCESS, AIPAction.DOWNLOAD_EVENTS, AIPAction.DOWNLOAD_DOCUMENTATION,
-      AIPAction.DOWNLOAD_SUBMISSIONS, AIPAction.CHANGE_TYPE, AIPAction.ASSOCIATE_DISPOSAL_SCHEDULE,
-      AIPAction.ASSOCIATE_DISPOSAL_HOLD, AIPAction.SEARCH_DESCENDANTS, AIPAction.SEARCH_PACKAGE));
+    List.of(AIPAction.NEW_CHILD_AIP_BELOW));
+  private static final Set<AIPAction> POSSIBLE_ACTIONS_ON_SINGLE_AIP = new HashSet<>(Arrays.asList(AIPAction.DOWNLOAD,
+    AIPAction.MOVE_IN_HIERARCHY, AIPAction.UPDATE_PERMISSIONS, AIPAction.REMOVE, AIPAction.NEW_PROCESS,
+    AIPAction.DOWNLOAD_EVENTS, AIPAction.DOWNLOAD_DOCUMENTATION, AIPAction.DOWNLOAD_SUBMISSIONS, AIPAction.CHANGE_TYPE,
+    AIPAction.ASSOCIATE_DISPOSAL_SCHEDULE, AIPAction.ASSOCIATE_DISPOSAL_HOLD, AIPAction.SEARCH_DESCENDANTS,
+    AIPAction.SEARCH_PACKAGE, AIPAction.NEW_CHILD_AIP_BELOW, AIPAction.NEW_REPRESENTATION));
   private static final Set<AIPAction> POSSIBLE_ACTIONS_ON_MULTIPLE_AIPS = new HashSet<>(
     Arrays.asList(AIPAction.MOVE_IN_HIERARCHY, AIPAction.UPDATE_PERMISSIONS, AIPAction.REMOVE, AIPAction.NEW_PROCESS,
       AIPAction.CHANGE_TYPE, AIPAction.ASSOCIATE_DISPOSAL_SCHEDULE, AIPAction.ASSOCIATE_DISPOSAL_HOLD));
@@ -231,6 +232,10 @@ public class AIPToolbarActions extends AbstractActionable<IndexedAIP> {
       associateDisposalSchedule(aip, callback);
     } else if (AIPAction.ASSOCIATE_DISPOSAL_HOLD.equals(action)) {
       manageDisposalHold(aip, callback);
+    } else if (AIPAction.NEW_CHILD_AIP_TOP.equals(action) || AIPAction.NEW_CHILD_AIP_BELOW.equals(action)) {
+      newChildAip(callback);
+    } else if (AIPAction.NEW_REPRESENTATION.equals(action)) {
+      newRepresentation(callback);
     } else {
       unsupportedAction(action, callback);
     }
@@ -317,6 +322,24 @@ public class AIPToolbarActions extends AbstractActionable<IndexedAIP> {
     });
   }
 
+  private void newRepresentation(final AsyncCallback<ActionImpact> callback) {
+    Dialogs.showPromptDialog(messages.outcomeDetailTitle(), null, null, messages.outcomeDetailPlaceholder(),
+      RegExp.compile(".*"), messages.cancelButton(), messages.confirmButton(), false, false,
+      new ActionNoAsyncCallback<String>(callback) {
+        @Override
+        public void onSuccess(String details) {
+          Services services = new Services("Create representation", "create");
+          services.representationResource(s -> s.createRepresentation(parentAipId, "MIXED", details))
+            .whenComplete((representation, error) -> {
+              if (representation != null) {
+                HistoryUtils.newHistory(BrowseRepresentation.RESOLVER, parentAipId, representation.getId());
+                callback.onSuccess(ActionImpact.UPDATED);
+              }
+            });
+        }
+      });
+  }
+
   private void download(IndexedAIP aip, AsyncCallback<ActionImpact> callback) {
     SafeUri downloadUri = RestUtils.createAIPDownloadUri(aip.getId());
     callback.onSuccess(ActionImpact.NONE);
@@ -347,7 +370,7 @@ public class AIPToolbarActions extends AbstractActionable<IndexedAIP> {
               public void onValueChange(ValueChangeEvent<IndexedAIP> event) {
                 final IndexedAIP parentAIP = event.getValue();
                 final String parentId = (parentAIP != null) ? parentAIP.getId() : null;
-                final SelectedItemsList<IndexedAIP> selected = new SelectedItemsList<>(Arrays.asList(aipId),
+                final SelectedItemsList<IndexedAIP> selected = new SelectedItemsList<>(Collections.singletonList(aipId),
                   IndexedAIP.class.getName());
 
                 Dialogs.showPromptDialog(messages.outcomeDetailTitle(), null, null, messages.outcomeDetailPlaceholder(),
@@ -410,7 +433,7 @@ public class AIPToolbarActions extends AbstractActionable<IndexedAIP> {
             public void onSuccess(Boolean confirmed) {
               if (confirmed) {
                 int counter = 0;
-                boolean justActive = parentAipState != null ? AIPState.ACTIVE.equals(parentAipState) : true;
+                boolean justActive = parentAipState == null || AIPState.ACTIVE.equals(parentAipState);
                 Filter filter = new Filter();
 
                 if (selected instanceof SelectedItemsList) {
@@ -1078,12 +1101,12 @@ public class AIPToolbarActions extends AbstractActionable<IndexedAIP> {
     ActionableBundle<IndexedAIP> aipActionableBundle = new ActionableBundle<>();
 
     // SEARCH
-    ActionableGroup<IndexedAIP> searchGroup = new ActionableGroup<>(messages.searchWithin(), "btn-search", false);
+    ActionableGroup<IndexedAIP> searchGroup = new ActionableGroup<>(messages.searchWithin(), "btn-search");
     searchGroup.addButton(messages.searchDescendants(), AIPAction.SEARCH_DESCENDANTS, ActionImpact.NONE, "btn-sitemap");
     searchGroup.addButton(messages.searchPackage(), AIPAction.SEARCH_PACKAGE, ActionImpact.NONE, "btn-archive");
 
     // DOWNLOAD
-    ActionableGroup<IndexedAIP> downloadGroup = new ActionableGroup<>(messages.downloadButton(), "btn-download", false);
+    ActionableGroup<IndexedAIP> downloadGroup = new ActionableGroup<>(messages.downloadButton(), "btn-download");
     downloadGroup.addButton(messages.downloadButton() + " " + messages.oneOfAObject(AIP.class.getName()),
       AIPAction.DOWNLOAD, ActionImpact.NONE, "btn-download");
     downloadGroup.addButton(messages.preservationEventsDownloadButton(), AIPAction.DOWNLOAD_EVENTS, ActionImpact.NONE,
@@ -1094,21 +1117,23 @@ public class AIPToolbarActions extends AbstractActionable<IndexedAIP> {
       "btn-download");
 
     // MANAGEMENT
-    ActionableGroup<IndexedAIP> managementGroup = new ActionableGroup<>(messages.manage(), "btn-edit", false);
+    ActionableGroup<IndexedAIP> managementGroup = new ActionableGroup<>(messages.manage(), "btn-edit");
     managementGroup.addButton(messages.newArchivalPackage(), AIPAction.NEW_CHILD_AIP_TOP, ActionImpact.UPDATED,
       "btn-plus-circle");
     managementGroup.addButton(messages.newSublevel(), AIPAction.NEW_CHILD_AIP_BELOW, ActionImpact.UPDATED,
       "btn-plus-circle");
+    managementGroup.addButton(messages.newRepresentationButton(), AIPAction.NEW_REPRESENTATION, ActionImpact.UPDATED,
+      "btn-plus-circle");
     managementGroup.addButton(messages.changeTypeButton(), AIPAction.CHANGE_TYPE, ActionImpact.UPDATED, BTN_EDIT);
     managementGroup.addButton(messages.moveArchivalPackage(), AIPAction.MOVE_IN_HIERARCHY, ActionImpact.UPDATED,
       BTN_EDIT);
-    managementGroup.addButton(messages.archivalPackagePermissions(), AIPAction.UPDATE_PERMISSIONS, ActionImpact.UPDATED,
-      BTN_EDIT);
+    managementGroup.addButton(messages.editArchivalPackagePermissions(), AIPAction.UPDATE_PERMISSIONS,
+      ActionImpact.UPDATED, BTN_EDIT);
     managementGroup.addButton(messages.removeArchivalPackage(), AIPAction.REMOVE, ActionImpact.DESTROYED, "btn-ban");
 
     // PRESERVATION
     ActionableGroup<IndexedAIP> preservationGroup = new ActionableGroup<>(messages.preservationTitle(),
-      "btn-play-circle", true);
+      "btn-play-circle");
     preservationGroup.addButton(messages.runAction(), AIPAction.NEW_PROCESS, ActionImpact.UPDATED, "btn-play");
 
     // APPRAISAL
@@ -1117,11 +1142,11 @@ public class AIPToolbarActions extends AbstractActionable<IndexedAIP> {
     appraisalGroup.addButton(messages.appraisalReject(), AIPAction.APPRAISAL_REJECT, ActionImpact.DESTROYED, "btn-ban");
 
     // Disposal
-    ActionableGroup<IndexedAIP> disposalGroup = new ActionableGroup<>(messages.disposalTitle());
+    ActionableGroup<IndexedAIP> disposalGroup = new ActionableGroup<>(messages.disposalTitle(), "btn-calendar");
     disposalGroup.addButton(messages.associateDisposalScheduleButton(), AIPAction.ASSOCIATE_DISPOSAL_SCHEDULE,
-      ActionImpact.NONE, "fas fa-calendar");
+      ActionImpact.NONE, "btn-calendar");
     disposalGroup.addButton(messages.associateDisposalHoldButton(), AIPAction.ASSOCIATE_DISPOSAL_HOLD,
-      ActionImpact.NONE, "fas fa-lock");
+      ActionImpact.NONE, "btn-lock");
 
     aipActionableBundle.addGroup(searchGroup).addGroup(downloadGroup).addGroup(managementGroup).addGroup(disposalGroup)
       .addGroup(appraisalGroup).addGroup(preservationGroup);
@@ -1139,9 +1164,9 @@ public class AIPToolbarActions extends AbstractActionable<IndexedAIP> {
     CHANGE_TYPE(RodaConstants.PERMISSION_METHOD_CHANGE_AIP_TYPE),
     ASSOCIATE_DISPOSAL_SCHEDULE(RodaConstants.PERMISSION_METHOD_ASSOCIATE_DISPOSAL_SCHEDULE),
     ASSOCIATE_DISPOSAL_HOLD(RodaConstants.PERMISSION_METHOD_ASSOCIATE_DISPOSAL_HOLD), SEARCH_DESCENDANTS(),
-    SEARCH_PACKAGE();
+    SEARCH_PACKAGE(), NEW_REPRESENTATION(RodaConstants.PERMISSION_METHOD_CREATE_REPRESENTATION);
 
-    private List<String> methods;
+    private final List<String> methods;
 
     AIPAction(String... methods) {
       this.methods = Arrays.asList(methods);
